Changes -> reworked code